# RoBin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  demo.sh  expr.sh  out.csv  prepare.sh  reproduce.sh  run.py  run.sh  run_case_profiling.sh  run_profiling.sh  run_profiling_160.sh  tmp_profiling_160.sh
.github/workflows/: cmake-build.yml
cmake/: FindTBB.cmake
datasets/: README.md  download.sh  gen_linear_fb-1.py
profiling_result/: analysis_depth.ipynb  analysis_memory.ipynb  analysis_overfit.ipynb  analysis_smo.ipynb  run_all_profiling.sh  run_case_profiling.sh  stats_find_case.ipynb  stats_fit_overfit.ipynb  stats_memory_consumption.ipynb  stats_multi_thread.ipynb  stats_single_thread.ipynb  stats_smo.ipynb
result/: analysis_alex_oob.ipynb  analysis_bulkload_variance.ipynb  check.csv  memory_consumption.csv  memory_consumption.ipynb  multi_thread.ipynb  multi_thread_tail_lat.csv  multi_thread_tail_lat.ipynb  multi_thread_thp.csv  single_thread.ipynb  single_thread_tail_lat.csv  single_thread_tail_lat.ipynb  single_thread_thp.alex_lipp_extended.csv  single_thread_thp.alex_lipp_preload_1_100_dataset.csv  single_thread_thp.alex_lipp_preload_1_100_uint64.csv  single_thread_thp.alex_lipp_preload_1_10_dataset.csv  single_thread_thp.alex_lipp_preload_1_10_uint64.csv  single_thread_thp.alex_oob.csv  single_thread_thp.csv
script/: alex_fb.ipynb  analysis_case.ipynb  analysis_cmp.ipynb  analysis_depth.ipynb  analysis_overfit.ipynb  csv.ipynb  expr.sh  profiling.ipynb  result_plotter.ipynb  scatter.ipynb  test.ipynb
src/: tscns.h
src/benchmark/: benchmark.h  benchmark.h.bak  binary_search.h  generator.h  microbench.cpp  new_zipf.h  pgm_metric.h  utils.h  zipf.h
src/competitor/: competitor.h  indexInterface.h  partition_interface.h
src/competitor/alex/: alex.h
src/competitor/alexol/: alex.h
src/competitor/alexolc/: alexolc.h
src/competitor/art/: art.h
src/competitor/artolc/: artolc.h
src/competitor/artsync/: artolc.h  artrowex.h  artunsync.h
src/competitor/btree/: btree.h
src/competitor/btreeolc/: btreeolc.h
src/competitor/dili/: dili.h
src/competitor/dytis/: dytis.h
src/competitor/findex/: finedex.h
src/competitor/finedex/: finedex.h
(+61 files in other folders)
